re PR fortran/42104 ([F03] runtime segfault with procedure pointer component)

2009-11-20  Paul Thomas  <pault@gcc.gnu.org>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42104
	* trans-expr.c (gfc_conv_procedure_call): If procedure pointer
	component call, use the component's 'always_explicit' attr
	for array arguments.

2009-11-20  Paul Thomas  <pault@gcc.gnu.org>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42104
	* gfortran.dg/proc_ptr_comp_23.f90 : New test.


Co-Authored-By: Janus Weil <janus@gcc.gnu.org>

From-SVN: r154358